--- a/css/style.css
+++ b/css/style.css
@@ -1,147 +1,540 @@
-:root{
-    --primary: #d62727;
-    --bg:#f4fffc;
-    --secondry: #FBA518; 
-    --thirdy: #A89C29;
+:root {
+  --primary: #d62727;
+  --bg: rgb(244, 255, 252);
+  --secondry: #fba518;
+  --thirdy: #a89c29;
 }
-*{
-    margin: 0;
-    padding: 0;
-    border: none;
-    box-sizing: none;
-    outline: none;
-    text-decoration: none;
-    
+* {
+  margin: 0;
+  padding: 0;
+  border: none;
+  box-sizing: none;
+  outline: none;
+  text-decoration: none;
+}
+html{
+  scroll-behavior: smooth;
 }
 
-body{
-    font-family: 'Poppin' sans-serif;
-    background-color: var(--bg);
-    color: black;
-    
+body {
+  font-family: "Poppin" sans-serif;
+  background-color: var(--bg);
+  color: black;
+}
 
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--primary);
+  align-items: center;
+  padding: 1.2rem 8%;
+  border-bottom: 1px solid #f0f1fa;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 9999;
 }
-/*navigation bar*/
-.navbar{
-    display: flex;
-    justify-content: space-between;
-    background-color:  var(--primary);
-    align-items: center;
-    padding: 1.2rem 8%;
-    border-bottom: 1px solid  #f0f1fa ;
-    position: fixed;
-    top: 0;
-    right: 0;
-    left: 0;
-    z-index: 9999;
+.navbar .nav-logo {
+  font-weight: 700;
+  font-size: 3rem;
+  color: var(--bg);
+  font-style: italic;
+  padding: 0 1.5rem;
 }
-.navbar .nav-logo{
-   font-weight: 700;
-   font-size: 3rem;
-   color: var(--bg);
-   font-style: italic;
-   padding: 0 1.5rem;
+.navbar .nav-logo span {
+  color: var(--secondry);
+}
+.navbar .nav-bar a {
+  color: var(--bg);
+  font-size: 1.4rem;
+  margin: 0 1rem;
+  display: inline-block;
+}
+.navbar .nav-bar a:hover {
+  color: var(--secondry);
+}
+.navbar .nav-bar a::after {
+  content: "";
+  padding-bottom: 0.5rem;
+  border-bottom: 0.1rem solid var(--secondry);
+  display: block;
+  transform: scaleX(0);
+  transition: 0.2s linear;
+}
+.navbar .nav-bar a:hover::after {
+  transform: scaleX(0.5);
+}
+.navbar .nav-icon a {
+  color: var(--bg);
+  margin: 0 0.5rem;
+}
+.navbar .nav-icon a:hover {
+  color: var(--secondry);
+}
+#menu {
+  display: none;
+}
+/*search bar*/
 
+.navbar .search-container{
+  position: absolute;
+  top: 100%;
+  right: 11%;
+  background-color: var(--primary);
+  width: 40rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  border: 1px solid #ddd;
+  transform: scaleY(0);
+  transform-origin: top;
+  border-radius: 5px;
 }
-.navbar .nav-logo span{
-    color: var(--secondry);
+.navbar .search-container.active{
+  transform: scaleY(1);
 }
-.navbar .nav-bar a{
-    color: var(--bg);
-    font-size: 1.4rem;
-    margin: 0 1rem;
-    display: inline-block;
+.navbar .search-container .search{
+  padding: 1rem ;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 70%;
 }
-.navbar .nav-bar a:hover{
-    color: var(--secondry);
+.navbar .search-container input{
+  width: 100%;
+  height: 100%;
+  font-size: 1.4rem;
+  padding: 1rem;
+  color: black;
+  padding: 0.2rem 0.2rem;
+  border-radius: 2.5px;
+  justify-content: center;
+  
 }
-.navbar .nav-bar a::after{
-    content: '';
-    padding-bottom: 0.5rem;
-    border-bottom: 0.1rem solid var(--secondry);
-    display: block;
-    transform: scaleX(0);
-    transition: 0.2s linear;
+/*cart bar*/
+.navbar .cart-container{
+  position: absolute;
+  top: 100%;
+  right: 0%;
+  height: 100vh;
+  width: 30rem;
+  text-align: center;
+  border: 1px solid #ddd;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: 0.2s;
+  background-color: rgba(0, 0, 0, 0.5);
 }
-.navbar .nav-bar a:hover::after{
-    transform: scaleX(0.5);
+.navbar .cart-container.active{
+  transform: scaleX(1);
 }
-.navbar .nav-icon a{
-    color: var(--bg);
-    margin: 0 0.5rem;
-   
+.navbar .cart-container h2{
+  font-size: 2.7rem;
+  color: #f3f3f3;
+  padding: 0.5rem 1rem;
 }
-.navbar .nav-icon a:hover{
-    color: var(--secondry);
+.navbar .cart-container p{
+  font-size: 1.5rem;
+  color: #f3f3f3;
+  padding: 1rem ;
 }
-#menu{
-    display: none;
+.nav-bar .cart-container li{
+  font-size: 1rem;
+  color: #f3f3f3;
+  padding: 0.5rem ;
 }
 
 /*hero section*/
-.hero{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    background-image: url(../image/bg\ 1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: right;
-   background-clip: inherit;
+.hero {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  background-image: url(../image/bg1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+ 
 }
+.hero::after{
+    content: '';
+    display: block;
+    position: absolute;
+    height: 20%;
+    width: 100%;
+    bottom: 0;
+    background: linear-gradient(0deg, rgba(238, 238, 238,04) 1%, rgba(238, 238, 238, 0.1) 5%) ;
+
+}
+.hero .content{
+    padding: 1.4rem 7%;
+    max-width: 60%;
+}
+.hero .content h1{
+    font-size: 5rem;
+    color: black;
+    font-style: italic;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+    line-height: 1.5;
+}
+.hero .content h1 span{
+    color: var(--thirdy);
+}
+.hero .content p{
+    font-size: 2rem;
+    font-weight: 100;
+    margin-top: 0.5rem;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+.hero .content .cta{
+    font-size: 2rem;
+    color: white;
+    background-color: var(--secondry);
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 1rem 3rem;
+    border-radius: 0.5rem;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+    display: inline-block;
+}
+/*about section*/
+.about{
+    padding: 8rem 7% 1.4rem;
+    
+}
+.about h2{
+    text-align: center;
+    color: black;
+    font-size: 4rem;
+    font-weight: 700;
+    margin-bottom: 3rem;
+    font-style: italic;
+    text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+.about h2 span{
+   color: var(--thirdy);
+}
+.about .row{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about .row .row-img{
+  display: 1 1 60rem;
+  justify-content: center;
+}
+.about .row .row-img img{
+  width: 100%;
+  position: relative;
+  border-radius: 25px;
+  box-shadow: 3px 6px 6px rgba(0, 0, 0, 0.5);
+}
+.about .row .content{
+  display: 1 1 35rem;
+  padding: 0 1rem;
+}
+.about .row .content h3{
+  font-size: 2.5rem;
+  padding: 0 3rem;
+  margin-bottom: 1rem;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  }
+.about .row .content span{
+  color: var(--thirdy);
+}
+.about .row .content p{
+  font-size: 1.4rem;
+  padding: 0 0.5rem;
+  line-height: 1.6;
+  font-weight: 100;
+  margin-bottom: 0.8rem;
+  
+}
+
+/*product section*/
+.product{
+  padding: 8rem 7% 1.4rem;
+  
+}
+.product h2{
+  text-align: center;
+  font-size: 4rem;
+  font-style: italic;
+  font-weight: 700;
+  margin-bottom: 3rem;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+.product h2 span{
+  color: var(--thirdy);
+}
+.product p{
+  text-align: center;
+  font-size: 1.4rem;
+  margin: auto;
+  font-weight: 100;
+  margin-bottom: 3rem;
+  line-height: 1.6;
+}
+
+.product .row{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 4rem;
+}
+.product .row .catalog-card {
+  padding: 1rem 1rem 0;
+    display: inline-block;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    margin: 10px;
+    background-color: var(--primary);
+    box-shadow: 1px 7px 10px rgba(0, 0, 0, 0.3);
+
+}
+
+.product .row .catalog-card img{
+  border-radius: 5px;
+  max-height: 15rem;
+  box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.5);
+  
+}
+.product .row .card-tittle{
+  font-size: 2rem;
+  text-align: center;
+  font-weight: bold;
+  color: var(--secondry);
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+}
+.product .row .card-price{
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+
+}
+
+.product .row .catalog-card a{
+  padding: 1rem 1rem;
+  color: rgb(243, 243, 243);
+}
+.product .row .catalog-card a:hover{
+  color: var(--secondry);
+}
+/*product view modal cart*/
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.modal .modal-content {
+  background-color: var(--primary);
+  display: flex;
+  margin-top: 8rem;
+  max-width: 80%;
+  max-height: 100%;
+  justify-content: center;
+  align-items: center;
+  text-align: right;
+}
+
+#modalImage{
+ height: 25rem;
+ width: 20rem;
+ text-align: center;
+}
+
+#modalTitle{
+  font-size: 3rem;
+  color: var(--secondry);
+}
+
+#modalDescription{
+font-size: 1.2rem;
+}
+
+#modalPrice{
+  font-size: 2rem;
+}
+
+
+.close {
+  position: absolute;
+  right: 35rem;
+  top: 8rem;
+  cursor: pointer;
+  font-size: 4rem;
+  color: white;
+}
+.close:hover{
+  color: var(--secondry);
+}
+
+.modal a{
+  
+}
+
+
+
+/*contact section*/
+.contact{
+  padding: 8rem 7% 1.4rem;
+}
+
+.contact h2{
+  text-align: center;
+  font-size: 4rem;
+  font-style: italic;
+  font-weight: 700;
+  margin-bottom: 3rem;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+.contact h2 span{
+  color: var(--thirdy);
+  
+}
+.contact p{
+  text-align: center;
+  font-size: 1.4rem;
+  margin: auto;
+  font-weight: 100;
+  margin-bottom: 2rem;
+  line-height: 1.6;
+}
+.contact .row{
+  background-color: var(--thirdy);
+  padding: 2rem 2rem;
+  border-radius: 10px;
+  align-items: center;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.5);
+  
+}
+.contact .input-contact{
+  margin-bottom: 1rem;
+  padding: 0 5rem;
+}
+.contact .row .input-map iframe{
+ width: 100%;
+ margin-bottom: 1rem;
+}
+.contact .row a{
+  font-size: 2rem;
+  color: rgb(49, 44, 44);
+
+}
+/*footer*/
+.footer{
+  display: block;
+  justify-content: center;
+  text-align: center;
+  background-color: var(--primary);
+  padding: 1.2rem 8% ;
+  
+}
+ .footer .links a{
+  color: var(--bg);
+  font-size: 1.4rem;
+  margin: 0 1rem;
+  display: inline-block;
+  transform: color 0.3s ease;
+
+}
+
+.footer .links a:hover{
+  color: var(--secondry);
+
+}
+
+.footer .credit{
+  font-size: 1.2rem;
+  padding: 1rem 2rem;
+}
+
 
 /* media queries*/
+
 /*laptop*/
+
 @media (max-width: 1366px) {
-    html{
-        font-size: 75%;
-    }
+  html {
+    font-size: 75%;
+  }
 }
+
 /*tablet*/
 @media (max-width: 768px) {
-    html{
-        font-size: 62.5%;
-    }
+  html {
+    font-size: 62.5%;
+  }
 
-    #menu{
+  #menu {
+    display: inline-block;
+  }
+
+  .navbar .nav-bar {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    height: 100vh;
+    width: 30rem;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: 0.3s;
+  }
+
+  .navbar .nav-bar.active {
+    right: 0;
+  }
+
+  .navbar .nav-bar a {
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
+  .navbar .nav-bar a::after {
+    transform-origin: 0 0;
+  }
+  .navbar .nav-bar a:hover:after {
+    transform: scaleX(0.2);
+  }
+  .about .row{
+    flex-wrap: wrap;
+  }
+  .about .row .row-img img{
+    height: 30rem;
+    object-fit: cover;
+    object-position: center;
     
-        display: inline-block;
-    }
-
-    .navbar .nav-bar {
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        height: 100vh;
-        width: 30rem;
-        background-color: rgba(0, 0, 0, 0.3);
-        transition: 0.3s;
-    }
-    
-    .navbar .nav-bar.active{
-        right: 0;
-    }
-
-    .navbar .nav-bar a{
-        display: block;
-        margin: 1.5rem;
-        padding: 0.5rem;
-        font-size: 2rem;
-    }
-    .navbar .nav-bar a::after{
-        transform-origin: 0 0;
-    }
-    .navbar .nav-bar a:hover:after{
-        transform: scaleX(0.2);
-    }
-
-  
-
-
+  }
+  .about .row .content h3{
+    text-align: center;
+    padding:  1rem;
+    font-size: 2.6rem;
+  }
+  .about .row .content p{
+    font-size: 1.4rem;
+    padding-bottom: 0.3rem;
+  }
 }
 /*mobile*/
 @media (max-width: 450px) {
-    html{
-        font-size: 55%;
-    }
+  html {
+    font-size: 55%;
+  }
 }
