--- a/css/style.css
+++ b/css/style.css
@@ -140,10 +140,28 @@ body {
   color: #f3f3f3;
   padding: 1rem ;
 }
-.nav-bar .cart-container li{
-  font-size: 1rem;
+
+.navbar .cart-container li{
+  font-size: 1.3rem;
   color: #f3f3f3;
   padding: 0.5rem ;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+
+}
+.navbar .cart-container .buy-now{
+  background-color: var(--secondry);
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.navbar .cart-container button {
+  background-color: transparent;
+  color: var(--secondry);
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  cursor: pointer;
 }
 
 /*hero section*/
@@ -325,7 +343,7 @@ body {
   color: var(--secondry);
 }
 /*product view modal cart*/
-.modal {
+ .product .modal {
   display: none;
   position: fixed;
   z-index: 1000;
@@ -334,26 +352,31 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  align-items: center;
   justify-content: center;
-  text-align: center;
+  align-items: center;
 }
 
 .modal .modal-content {
   background-color: var(--primary);
   display: flex;
-  margin-top: 8rem;
+  margin-top: 7rem;
   max-width: 80%;
-  max-height: 100%;
+  max-height: 85%;
   justify-content: center;
   align-items: center;
-  text-align: right;
+  border-radius: 10px;
+}
+.product .modal-paragraf{
+  display: block;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 
 #modalImage{
  height: 25rem;
  width: 20rem;
- text-align: center;
+ padding: 1.5rem;
 }
 
 #modalTitle{
@@ -362,18 +385,19 @@ body {
 }
 
 #modalDescription{
-font-size: 1.2rem;
+font-size: 1rem;
+
 }
 
 #modalPrice{
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 
 .close {
   position: absolute;
   right: 35rem;
-  top: 8rem;
+  top: 6rem;
   cursor: pointer;
   font-size: 4rem;
   color: white;
@@ -382,11 +406,16 @@ font-size: 1.2rem;
   color: var(--secondry);
 }
 
-.modal a{
-  
+.modal button{
+  position: relative;
+  font-size: 2rem;
+  left: 9rem;
+  bottom: 2rem;
+  background-color: var(--secondry);
+  border-radius: 5px;
+  width: 5rem;
+  cursor: pointer;
 }
-
-
 
 /*contact section*/
 .contact{
@@ -495,6 +524,7 @@ font-size: 1.2rem;
     width: 30rem;
     background-color: rgba(0, 0, 0, 0.5);
     transition: 0.3s;
+    border: 1px solid white;
   }
 
   .navbar .nav-bar.active {
